tests/negative/symbols/unused_call.orng
// unused_call.orng:7:7: error: expected a value of type `()`, got a value of type `Int`
//     f()
//      ^
// 
fn main() -> Int {
    _ = f()
    f()
    4
}

fn f() -> Int {4}